# sdk-nrf

./: CODEOWNERS  west.yml
.github/workflows/: matter-validation.yml
applications/matter_bridge/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  prj_release.conf  sample.yaml
applications/matter_weather_station/: CMakeLists.txt  Kconfig.sysbuild  README.rst  pm_static_factory_data.yml  prj.conf  prj_factory_data.conf  prj_release.conf  sample.yaml
cmake/sysbuild/: suit.cmake  zip.cmake
doc/matter/: index.rst
doc/nrf/: conf.py  known_issues.rst  links.txt
doc/nrf/samples/: matter.rst  (+1 more)
include/dfu/: dfu_target_suit.h
lib/nrf_modem_lib/: nrf_modem_os.c
modules/: modules.cmake
modules/matter/: CMakeLists.txt  Kconfig  config.rst
modules/openthread/: CMakeLists.txt  Kconfig  Kconfig.features  Kconfig.features.nrf  Kconfig.nrf5  Kconfig.thread
samples/: CMakeLists.txt  Kconfig
samples/matter/TAS_example/: CMakeLists.txt  Kconfig  VERSION
samples/matter/TAS_example/aci/: CMakeLists.txt
samples/matter/TAS_example/boards/: nrf5340dk_nrf5340_cpuapp.overlay
samples/matter/TAS_example/child_image/mcuboot/: prj.conf
samples/matter/TAS_example/configuration/nrf52840dk_nrf52840/: prj.conf
samples/matter/TAS_example/configuration/nrf5340dk_nrf5340_cpuapp/: prj.conf
samples/matter/TAS_example/configuration/nrf7002dk_nrf5340_cpuapp/: prj.conf
samples/matter/TAS_example/src/: main.c
samples/matter/dummy/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  VERSION  pm_static_nrf7002dk_nrf5340_cpuapp.yml  prj.conf  sample.yaml  sysbuild_internal.conf
samples/matter/dummy/boards/: nrf54l15dk_nrf54l15_cpuapp_internal.overlay
samples/matter/dummy/src/: main.c
scripts/: quarantine.yaml
snippets/matter/: matter_snippets.rst
snippets/matter-debug/: matter_debug.conf
snippets/matter-diagnostic-logs/: diagnostic_logs.conf
snippets/openthread/: openthread_snippets.rst
snippets/ot-ci/: ot-ci.conf
snippets/ot-debug/: ot-debug.conf
snippets/ot-diag-gpio/: snippet.yml
snippets/ot-usb/: ot-usb.conf  ot-usb.overlay
subsys/nrf_security/: Kconfig
subsys/sdfw_services/: Kconfig
subsys/zigbee/: Kconfig
sysbuild/: CMakeLists.txt  Kconfig.matter  Kconfig.suit  Kconfig.sysbuild  matter.cmake
(+573 files in other folders)
